Updated home page

--- a/index.html
+++ b/index.html
@@ -38,11 +38,11 @@
                 I currently work for a great company known as the Dixie Group, where I primarily do .NET development.
                 Beyond programming, I'm also a big fan of wakeboarding, hiking, and rafting.
             </p>
+        </div>
 
-            <div class="image-container">
-                <div id="hiking-parallax" class="parallax-responsive"></div>
-                <p class="image-text-bottom-wide" id="hiking-parallax-caption" style="background: rgba(0, 0, 0, 0.50); padding: 20px; font-size: 24px;">Chattanooga</p>
-            </div>
+        <div class="image-container">
+            <div id="hiking-parallax" class="parallax-responsive"></div>
+            <p class="image-text-bottom-wide" id="hiking-parallax-caption" style="background: rgba(0, 0, 0, 0.50); padding: 20px; font-size: 24px;">Chattanooga</p>
         </div>
 
         <div class="column-container theme-column-container" id="info2">
@@ -50,35 +50,57 @@
                 <span id="info2-icon" class="fa fa-chevron-circle-down"></span>
             </div>
             <div class="column">
-                <p>What kind of .NET development?</p>
+                <p>What kind of development?</p>
             </div>
         </div>
         <div class="theme-content-dark" id="info2-content">
-            <p>
-                <div class="theme-text-area">
-                    <p>
-                        I do full-stack web development (including REST/SOAP web services) and desktop application development:
-                    </p>
-                    <ul style="border: 1px solid white;">
-                        <li>
-                            ASP.NET
-                            <ul>
-                                <li>MVC</li>
-                                <li>WebForms</li>
-                                <li>Web API</li>
-                            </ul>
-                        </li>
-                        <li>
-                            .NET
-                            <ul>
-                                <li>WinForms</li>
-                                <li>WPF</li>
-                                <li>WCF</li>
-                            </ul>
-                        </li>
-                    </ul>
+            <div class="row equal-height text-center" style="padding-bottom: 5px;">
+                <div class="col-sm-4 theme-text-area">
+                    <h3>.NET (C#)</h3>
+                    <hr/>
+                    <p>Experience with creating desktop applications using WinForms and WPF</p>
+                    <p>Experience with creating web applications using ASP.NET MVC, WebForms, and Web API</p>
+                    <p>Experience with .NET Framework, .NET Core, and .NET Standard</p>
                 </div>
-            </p>
+                <div class="col-sm-4 theme-text-area">
+                    <h3>Java</h3>
+                    <hr/>
+                    <p>Tools for algorithm visualization and static website generation using Swing</p>
+                    <p>Web development using Play Framework</p>
+                </div>
+                <div class="col-sm-4 theme-text-area">
+                    <h3>JavaScript</h3>
+                    <hr/>
+                    <p>Experience with popular JavaScript libraries such as jQuery and Chart.js</p>
+                    <p>Tools for visualization of search algorithms</p>
+                </div>
+            </div>
+            <div class="row equal-height text-center" style="padding-bottom: 5px;">
+                <div class="col-sm-4 theme-text-area">
+                    <h3>Web</h3>
+                    <hr/>
+                    <p>Full-stack development of customer-facing websites, intranets, and dashboards.</p>
+                    <p>Experience with designing, creating, and maintaining REST and SOAP web services.</p>
+                </div>
+                <div class="col-sm-4 theme-text-area">
+                    <h3>RPG</h3>
+                    <hr/>
+                    <p>Experience with creating batch programs in both free and fixed format</p>
+                </div>
+                <div class="col-sm-4 theme-text-area">
+                        <h3>SQL</h3>
+                        <hr/>
+                        <p>Experience with multiple Relational Database Management Systems (SQL Server, DB2, MySQL, SQLite)</p>
+                    </div>
+
+            </div>
+            <div class="row equal-height text-center">
+                <div class="col-sm-4 theme-text-area mobile-w-100">
+                    <h3>Python</h3>
+                    <hr/>
+                    <p>Web development using Django</p>
+                </div>
+            </div>
         </div>
 
         <div class="column-container theme-column-container" id="info3">
@@ -94,6 +116,19 @@
                 I enjoy working on some personal projects. Several are on my <a class="btn theme-btn-git" href="https://github.com/jakobyc" target="_blank">GitHub</a>. Feel free
                 to check them out and contribute.
             </p>
+            <br/>
+            <div class="row">
+                <div class="col-sm-3 col-sm-offset-2">
+                    <h4>Projects</h4>
+                    <p>Learn more about my projects</p>
+                    <a class="btn btn-lg btn-success" style="width: 100%;">Projects</a>
+                </div>
+                <div class="col-sm-3 col-sm-offset-1">
+                    <h4>Bored?</h4>
+                    <p>Try out my visualization tool!</p>
+                    <a class="btn btn-lg btn-primary" style="width: 100%;">Visualization</a>
+                </div>
+            </div>
         </div>
     </div>
 
