--- a/index.html
+++ b/index.html
@@ -121,12 +121,12 @@
                 <div class="col-sm-3 col-sm-offset-2">
                     <h4>Projects</h4>
                     <p>Learn more about my projects</p>
-                    <a class="btn btn-lg btn-success" style="width: 100%;">Projects</a>
+                    <a href="/projects.html" class="btn btn-lg btn-success" style="width: 100%;">Projects</a>
                 </div>
                 <div class="col-sm-3 col-sm-offset-1">
                     <h4>Bored?</h4>
                     <p>Try out my visualization tool!</p>
-                    <a class="btn btn-lg btn-primary" style="width: 100%;">Visualization</a>
+                    <a href="/visualization.html" class="btn btn-lg btn-primary" style="width: 100%;">Visualization</a>
                 </div>
             </div>
         </div>
