--- a/visualization.html
+++ b/visualization.html
@@ -15,6 +15,13 @@
     <!--Nav bar -->
     <nav></nav>
 
+    <!-- Breadcrumb -->
+    <div class="breadcrumb-list theme-breadcrumb-list">
+        <a class="breadcrumb-item theme-breadcrumb-item" href="index.html"><span class="breadcrumb-item glyphicon glyphicon-home"></span></a>
+        <span class="breadcrumb-item theme-breadcrumb-item">/</span>
+        <span class="breadcrumb-item-active"><span>Visualization</span></span>
+    </div>
+
     <!-- Content -->
     <br />
     <div class="container">
@@ -277,7 +284,7 @@
                 // Reset iteration on execution of algorithm:
                 iteration = 1;
                 renderIter = 0;
-            });
+            })
         }
     });
 </script>
