Removed parallax from home page and used smaller image

--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@
         </div>
 
         <div class="image-container">
-            <div id="hiking-parallax" class="parallax-responsive"></div>
-            <p class="image-text-bottom-wide" id="hiking-parallax-caption" style="background: rgba(0, 0, 0, 0.50); padding: 20px; font-size: 24px;">Chattanooga</p>
+            <img src="content/hiking2.jpg" alt="Image Not Found" id="hiking-image" class="image-responsive hide-mobile">
+            <p class="image-text-bottom-wide" id="hiking-image-caption" style="background: rgba(0, 0, 0, 0.50); padding: 20px; font-size: 24px;">Chattanooga</p>
         </div>
 
         <div class="column-container theme-column-container" id="info2">
