Hide new image from mobile

--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
             </p>
         </div>
 
-        <div class="image-container">
-            <img src="content/hiking2.jpg" alt="Image Not Found" id="hiking-image" class="image-responsive hide-mobile">
+        <div class="image-container hide-mobile">
+            <img src="content/hiking2.jpg" alt="Image Not Found" id="hiking-image" class="image-responsive">
             <p class="image-text-bottom-wide" id="hiking-image-caption" style="background: rgba(0, 0, 0, 0.50); padding: 20px; font-size: 24px;">Chattanooga</p>
         </div>
 
