Added devicons/fa icons to index.html

--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
         <div class="theme-content-dark" id="info2-content">
             <div class="row equal-height text-center" style="padding-bottom: 5px;">
                 <div class="col-sm-4 theme-text-area">
+                    <h1 class="devicon-csharp-plain colored"></h1>
                     <h3>.NET (C#)</h3>
                     <hr/>
                     <p>Experience with creating desktop applications using WinForms and WPF</p>
@@ -64,12 +65,14 @@
                     <p>Experience with .NET Framework, .NET Core, and .NET Standard</p>
                 </div>
                 <div class="col-sm-4 theme-text-area">
+                    <h1 class="devicon-java-plain colored"></h1>
                     <h3>Java</h3>
                     <hr/>
                     <p>Tools for algorithm visualization and static website generation using Swing</p>
                     <p>Web development using Play Framework</p>
                 </div>
                 <div class="col-sm-4 theme-text-area">
+                    <h1 class="devicon-javascript-plain"></h1>
                     <h3>JavaScript</h3>
                     <hr/>
                     <p>Experience with popular JavaScript libraries such as jQuery and Chart.js</p>
@@ -78,28 +81,38 @@
             </div>
             <div class="row equal-height text-center" style="padding-bottom: 5px;">
                 <div class="col-sm-4 theme-text-area">
+                    <h1 class="devicon-firefox-plain colored"></h1>
                     <h3>Web</h3>
                     <hr/>
                     <p>Full-stack development of customer-facing websites, intranets, and dashboards.</p>
                     <p>Experience with designing, creating, and maintaining REST and SOAP web services.</p>
                 </div>
                 <div class="col-sm-4 theme-text-area">
+                    <h1 class="fa fa-desktop" style="font-size: 32px; color: green;"></h1>
                     <h3>RPG</h3>
                     <hr/>
                     <p>Experience with creating batch programs in both free and fixed format</p>
                 </div>
                 <div class="col-sm-4 theme-text-area">
-                        <h3>SQL</h3>
-                        <hr/>
-                        <p>Experience with multiple Relational Database Management Systems (SQL Server, DB2, MySQL, SQLite)</p>
-                    </div>
+                    <h1 class="fa fa-database" style="font-size: 32px; color: deepskyblue;"></h1>
+                    <h3>SQL</h3>
+                    <hr/>
+                    <p>Experience with multiple Relational Database Management Systems (SQL Server, DB2, MySQL, SQLite)</p>
+                </div>
 
             </div>
             <div class="row equal-height text-center">
                 <div class="col-sm-4 theme-text-area mobile-w-100">
+                    <h1 class="devicon-python-plain colored"></h1>
                     <h3>Python</h3>
                     <hr/>
                     <p>Web development using Django</p>
+                </div>
+                <div class="col-sm-4 theme-text-area mobile-w-100">
+                    <h1 class="devicon-c-plain colored"></h1>
+                    <h3>C</h3>
+                    <hr/>
+                    <p>DIY Arduino projects</p>
                 </div>
             </div>
         </div>
@@ -142,6 +155,7 @@
 <script src="js/bootstrap.js" type="text/javascript"></script>
 <script src="js/layout.js" type="text/javascript"></script>
 <script src="js/shared.js" type="text/javascript"></script>
+<link rel="stylesheet" href="https://cdn.rawgit.com/konpa/devicon/df6431e323547add1b4cf45992913f15286456d3/devicon.min.css">
 
 <script>
     $(document).ready(function()
