--- a/projects.html
+++ b/projects.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <link rel="stylesheet" type="text/css" href="css/bootstrap.css" />
+    <link rel="stylesheet" type="text/css" href="css/bootstrap-4.3.1/bootstrap.min.css" />
     <link rel="stylesheet" type="text/css" href="css/master.css" />
     <link rel="stylesheet" type="text/css" href="css/font-awesome.min.css" />
     <link rel="icon" href="content/favicon.png" type="image/x-icon">
@@ -14,15 +14,8 @@
     <!--Nav bar -->
     <nav></nav>
 
-    <!-- Breadcrumb -->
-    <div class="breadcrumb-list theme-breadcrumb-list">
-        <a class="breadcrumb-item theme-breadcrumb-item" href="index.html"><span class="breadcrumb-item glyphicon glyphicon-home"></span></a>
-        <span class="breadcrumb-item theme-breadcrumb-item">/</span>
-        <span class="breadcrumb-item-active"><span>Projects</span></span>
-    </div>
-
     <!-- Content -->
-    <div class="container">
+    <div class="container" style="padding-top: 70px;">
         <h1 class="theme-content-header">Projects</h1>
         <div>
             <div id="loader-container" style="display: none;">
@@ -61,7 +54,7 @@
 </html>
 
 <script src="js/jquery-3.2.1.min.js" type="text/javascript"></script>
-<script src="js/bootstrap.js" type="text/javascript"></script>
+<script src="js/bootstrap-4.3.1/bootstrap.min.js" type="text/javascript"></script>
 <script src="js/github.js" type="text/javascript"></script>
 <script src="js/layout.js" type="text/javascript"></script>
 
