--- a/visualization.html
+++ b/visualization.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
-    <link rel="stylesheet" type="text/css" href="css/bootstrap.css"/>
+    <link rel="stylesheet" type="text/css" href="css/bootstrap-4.3.1/bootstrap.min.css"/>
     <link rel="stylesheet" type="text/css" href="css/master.css"/>
     <link rel="stylesheet" type="text/css" href="css/font-awesome.min.css" />
     <link rel="stylesheet" type="text/css" href="css/algorithms.css" />
@@ -56,12 +56,16 @@
                     <label>Speed:</label>
                     <input id="speed" type="range" value="60">
                 </div>
-                <div class="col-sm-offset-5 col-sm-1">
+                <div class="col-sm-4">
                     <label>&nbsp;</label>
                     <br/>
-                    <div style="display: inline;"> 
+                    <div class="row">
+                        <div class="offset-sm-9 col-sm-1">
                             <span id="clear-grid" class="fa fa-trash grid-icon"></span>
+                        </div>
+                        <div class="col-sm-1">
                             <a href="https://en.wikipedia.org/wiki/Breadth-first_search" target="_blank" class="fa fa-question grid-icon"></a>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -81,7 +85,7 @@
 </html>
 
 <script src="js/jquery-3.2.1.min.js" type="text/javascript"></script>
-<script src="js/bootstrap.js" type="text/javascript"></script>
+<script src="js/bootstrap-4.3.1/bootstrap.min.js" type="text/javascript"></script>
 <script src="js/layout.js" type="text/javascript"></script>
 <script src="js/shared.js" type="text/javascript"></script>
 <script src="js/algorithms.js" type="text/javascript"></script>
