--- a/visualization.html
+++ b/visualization.html
@@ -71,7 +71,7 @@
             </div>
         </div>
         <br/>
-        <div class="not-selectable">
+        <div class="table-responsive not-selectable">
             <table id="grid" class="table table-bordered" style="text-align: center;">
                 <tbody>
                 </tbody>
