--- a/visualization.html
+++ b/visualization.html
@@ -84,6 +84,7 @@
 </body>
 </html>
 
+<script src="js/polyfill.js" type="text/javascript"></script>
 <script src="js/jquery-3.2.1.min.js" type="text/javascript"></script>
 <script src="js/bootstrap-4.3.1/bootstrap.min.js" type="text/javascript"></script>
 <script src="js/layout.js" type="text/javascript"></script>
